# tsfm-benchmarking

./: README.md  main.py  pyproject.toml
config/: dataset_config_map.yaml  experiment.yaml  model_config_map.yaml
data/univariate_raw/: example_1.csv  example_2.csv  example_3.csv
notebooks/: 01_explore_benchmarking_results.ipynb
results/: benchmark_summary.csv
results/last_value_baseline/ctx512_fh96_seed1_fit-zs_norm-z_imp-none/250915_0214_example_1/: config.json
results/last_value_baseline/ctx512_fh96_seed1_fit-zs_norm-z_imp-none/250915_0214_example_2/: config.json
results/last_value_baseline/ctx512_fh96_seed1_fit-zs_norm-z_imp-none/250915_0214_example_3/: config.json
results/last_value_baseline/ctx512_fh96_seed2_fit-zs_norm-z_imp-none/250915_0214_example_1/: config.json  y_pred.npy
results/last_value_baseline/ctx512_fh96_seed2_fit-zs_norm-z_imp-none/250915_0214_example_2/: config.json  y_true.npy
results/last_value_baseline/ctx512_fh96_seed2_fit-zs_norm-z_imp-none/250915_0214_example_3/: config.json  y_pred.npy
results/last_value_baseline/ctx512_fh96_seed3_fit-zs_norm-z_imp-none/250915_0214_example_1/: config.json
results/last_value_baseline/ctx512_fh96_seed3_fit-zs_norm-z_imp-none/250915_0214_example_2/: config.json  y_pred.npy
results/last_value_baseline/ctx512_fh96_seed3_fit-zs_norm-z_imp-none/250915_0214_example_3/: config.json
src/: constants.py  utils.py
src/datasets/: base_dataset.py  univariate_dataset.py
src/evaluation/: metrics_collection.py
src/models/: base_model.py  last_value_baseline.py  ttm_sktime.py
(+14 files in other folders)
